--- a/Draw/Controller/Feed/Hot/RankNormalCell.xib
+++ b/Draw/Controller/Feed/Hot/RankNormalCell.xib
@@ -85,7 +85,7 @@
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
-				<string key="-1.CustomClassName">CommonTabController</string>
+				<string key="-1.CustomClassName">RankNormalCell</string>
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -100,11 +100,11 @@
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
-					<string key="className">CommonTabController</string>
+					<string key="className">RankNormalCell</string>
 					<string key="superclassName">UIViewController</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CommonTabController.h</string>
+						<string key="minorKey">./Classes/RankNormalCell.h</string>
 					</object>
 				</object>
 			</array>
