--- a/Draw/Dice/View/CommonView/CommonSearchView.xib
+++ b/Draw/Dice/View/CommonView/CommonSearchView.xib
@@ -37,26 +37,28 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="431971643">
+					<object class="IBUIView" id="179207229">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIImageView" id="14401505">
-								<reference key="NSNextResponder" ref="431971643"/>
+							<object class="IBUIImageView" id="931593594">
+								<reference key="NSNextResponder" ref="179207229"/>
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{320, 35}</string>
-								<reference key="NSSuperview" ref="431971643"/>
-								<reference key="NSNextKeyView" ref="426721397"/>
+								<reference key="NSSuperview" ref="179207229"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="294418486"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
-							<object class="IBUITextField" id="426721397">
-								<reference key="NSNextResponder" ref="431971643"/>
+							<object class="IBUITextField" id="294418486">
+								<reference key="NSNextResponder" ref="179207229"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{11, 0}, {262, 31}}</string>
-								<reference key="NSSuperview" ref="431971643"/>
-								<reference key="NSNextKeyView" ref="637178106"/>
+								<string key="NSFrame">{{11, 2}, {262, 31}}</string>
+								<reference key="NSSuperview" ref="179207229"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="611177872"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -86,11 +88,12 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUIButton" id="637178106">
-								<reference key="NSNextResponder" ref="431971643"/>
+							<object class="IBUIButton" id="611177872">
+								<reference key="NSNextResponder" ref="179207229"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{281, 2}, {31, 31}}</string>
-								<reference key="NSSuperview" ref="431971643"/>
+								<reference key="NSSuperview" ref="179207229"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -126,9 +129,10 @@
 						</array>
 						<string key="NSFrameSize">{320, 35}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView" ref="14401505"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="931593594"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor" id="3838867">
+						<object class="NSColor" key="IBUIBackgroundColor" id="145128455">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
@@ -137,8 +141,9 @@
 				</array>
 				<string key="NSFrameSize">{320, 35}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="431971643"/>
-				<reference key="IBUIBackgroundColor" ref="3838867"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="179207229"/>
+				<reference key="IBUIBackgroundColor" ref="145128455"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 		</array>
@@ -148,7 +153,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">contentBackground</string>
 						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="14401505"/>
+						<reference key="destination" ref="931593594"/>
 					</object>
 					<int key="connectionID">6</int>
 				</object>
@@ -156,7 +161,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">keywordInputField</string>
 						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="426721397"/>
+						<reference key="destination" ref="294418486"/>
 					</object>
 					<int key="connectionID">10</int>
 				</object>
@@ -164,14 +169,14 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">contentView</string>
 						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="431971643"/>
+						<reference key="destination" ref="179207229"/>
 					</object>
 					<int key="connectionID">12</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="426721397"/>
+						<reference key="source" ref="294418486"/>
 						<reference key="destination" ref="191373211"/>
 					</object>
 					<int key="connectionID">13</int>
@@ -179,7 +184,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickClose:</string>
-						<reference key="source" ref="637178106"/>
+						<reference key="source" ref="611177872"/>
 						<reference key="destination" ref="191373211"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -198,7 +203,7 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="431971643"/>
+							<reference ref="179207229"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -215,28 +220,28 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="431971643"/>
+						<reference key="object" ref="179207229"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="14401505"/>
-							<reference ref="426721397"/>
-							<reference ref="637178106"/>
+							<reference ref="931593594"/>
+							<reference ref="294418486"/>
+							<reference ref="611177872"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="14401505"/>
-						<reference key="parent" ref="431971643"/>
+						<reference key="object" ref="931593594"/>
+						<reference key="parent" ref="179207229"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
-						<reference key="object" ref="426721397"/>
-						<reference key="parent" ref="431971643"/>
+						<reference key="object" ref="294418486"/>
+						<reference key="parent" ref="179207229"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">9</int>
-						<reference key="object" ref="637178106"/>
-						<reference key="parent" ref="431971643"/>
+						<reference key="object" ref="611177872"/>
+						<reference key="parent" ref="179207229"/>
 					</object>
 				</array>
 			</object>
@@ -257,7 +262,40 @@
 			<nil key="sourceID"/>
 			<int key="maxID">13</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">CommonInfoView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CommonInfoView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">CommonSearchView</string>
+					<string key="superclassName">CommonInfoView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="contentBackground">UIImageView</string>
+						<string key="keywordInputField">UITextField</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="contentBackground">
+							<string key="name">contentBackground</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="keywordInputField">
+							<string key="name">keywordInputField</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CommonSearchView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
